--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
