--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
     "sass": "^1.89.2",
     "slick-carousel": "^1.8.1"
